chore: Update spacing tokens and remove fixed input height

--- a/src/input/styles.scss
+++ b/src/input/styles.scss
@@ -53,7 +53,6 @@
   box-shadow: var(#{custom-props.$styleBoxShadowDefault});
 
   @include styles.font-body-m;
-  block-size: awsui.$size-vertical-input;
 
   &:hover {
     border-color: var(
